--- a/gobotany/simplekey/templates/simplekey/help_collections.html
+++ b/gobotany/simplekey/templates/simplekey/help_collections.html
@@ -1,4 +1,4 @@
-{% extends "simplekey/help.html" %}
+{% extends "simplekey/_old_help.html" %}
 {% block pagetitle %}
 Understanding Plant Collections
 {% endblock %}
