--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -1,4 +1,4 @@
-{% extends "simplekey/base.html" %}
+{% extends "simplekey/_old_base.html" %}
 {% load thumbnail %}
 {% load simplekey_extras %}
 {% block title %}
