--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -1,4 +1,4 @@
-{% extends "simplekey/base.html" %}
+{% extends "simplekey/_old_base.html" %}
 {% block title %}
     {{ page.title }}
 {% endblock %}
