Integrate visual design for the first pile/group ID page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@941 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -23,7 +23,25 @@
             <link rel="stylesheet" href="/static/css/ie8.css">
         <![endif]-->
 
-        <!-- TODO: add jQuery JS here -->
+        <!--JQuery-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+        <!--Global JS File-->
+        <script type="text/javascript" src="/static/scripts/global.js"></script>
+        <!--Shadowbox-->
+        <script type="text/javascript" src="/static/scripts/shadowbox.js"></script>
+        <script type="text/javascript">
+            Shadowbox.init();
+        </script>
+        <!--Image Gallery Slider-->
+        <script type="text/javascript"
+            src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
+        <script type="text/javascript">
+            $(function() {
+                //Start
+                $('.img-container').scrollable();
+            });
+        </script>
+
     </head>
 
     {% block body %}{% endblock %}
