--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -8,16 +8,20 @@
 
                 <div class="three-col">
                     <h6>Go Botany</h6>
-                    <p><a href="#">Plant Identifier</a> | <a href="#">MyPlants</a> |
-                        <a href="#">Advanced ID Tools</a> | <a href="#">About</a></p>
+                    <p><a href="/simple/1/">Plant Identifier</a> |
+                        <a href="#">MyPlants</a> |
+                        <a href="/simple/advanced/">Advanced ID Tools</a> |
+                        <a href="#">About</a></p>
                     <h6>Legal</h6>
-                    <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+                    <p><a href="#">Privacy Policy</a> |
+                        <a href="#">Terms of Use</a></p>
                 </div><!--Closes .three-col-->
 
                 <div class="three-col last">
-                    <img src="/static/images/layout/nsf-logo.png" alt="National Science Foundation" class="nsf-logo" />
+                    <img src="/static/images/layout/nsf-logo.png"
+                        alt="National Science Foundation" class="nsf-logo">
                     <p>The Go Botany project is supported in part by the 
-                        National Science Foundation.<br /><a href="www.nsf.gov">www.nsf.gov</a></p>
+                        National Science Foundation.<br><a href="www.nsf.gov">www.nsf.gov</a></p>
                     <div class="clearit"></div>
                 </div><!--Closes .three-col-->
 
