--- a/gobotany/simplekey/templates/simplekey/help_video.html
+++ b/gobotany/simplekey/templates/simplekey/help_video.html
@@ -1,4 +1,4 @@
-{% extends "simplekey/_old_help.html" %}
+{% extends "simplekey/help.html" %}
 {% block pagetitle %}
 Video Help Topics
 {% endblock %}
