--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -1,7 +1,7 @@
 {% extends "simplekey/_old_base.html" %}
-{% block title %}
-    {{ pilegroup.name }}
-{% endblock %}
+
+{% block title %}{{ pilegroup.name }}{% endblock %}
+
 {% block content %}
   <div class="PilePage" id="pile-finder">
     <h1>{{ pilegroup.name }}</h1>
