--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -19,10 +19,10 @@
                     </form>
                 </div>
                 <ul>
-                    <li class="home"><a href="index.php">Home</a></li>
-                    <li class="plant-id"><a href="1/">Plant Identifier</a></li>
+                    <li class="home"><a href="/simple/">Home</a></li>
+                    <li class="plant-id"><a href="/simple/1/">Plant Identifier</a></li>
                     <li class="my-plants"><a href="#">MyPlants</a></li>
-                    <li class="advanced-id"><a href="advanced/">Advanced ID Tools</a></li>
+                    <li class="advanced-id"><a href="/simple/advanced/">Advanced ID Tools</a></li>
                     <li class="teaching-tools"><a href="#">Teaching Tools</a></li>
                     <li class="about last"><a href="#">About</a></li>
                 </ul>
