--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -1,4 +1,4 @@
-{% extends "simplekey/_old_help.html" %}
+{% extends "simplekey/help.html" %}
 {% block pagetitle %}
 About Go-Botany
 {% endblock %}
