--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -1,4 +1,4 @@
-{% extends "simplekey/_old_help.html" %}
+{% extends "simplekey/help.html" %}
 {% block pagetitle %}
 Getting Started
 {% endblock %}
